# gosuslugi-slot-watcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01_architecture.md  02_epgu-api.md  03_session.md  04_alerts.md  05_legal.md  README.md
src/gswatch/: browser.py  config.py  constants.py  main.py  selftest.py
src/gswatch/alerts/: __init__.py  base.py  command.py  log_sink.py  macos.py  messages.py  telegram.py  vk.py
